[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canvasdraw"
version = "0.0.4"
authors = [
  { name="Thijs Boom", email="thijs@twboom.dev" },
]
description = "A parser for easier generating of drawings for the JavaScript Canvas API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/twboom/CanvasDraw"
"Bug Tracker" = "https://github.com/twboom/CanvasDraw/issues"